nodejs-deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
    name: cloud-tests
    labels:
        app: nodejs-sample
spec:
    selector:
        deployment: cloud-tests
    ports:
        - name: 8080-tcp
          protocol: TCP
          port: 8080
          targetPort: 8080
